--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@ body {
       .mode-change-btns {
         position: absolute;
         bottom: 20px;
-        left: 20px;
+        left: 320px;
         z-index: 3;
       }
     }
@@ -41,7 +41,7 @@ body {
       top: 0;
       width: 300px;
       height: 100%;
-      background-color: pink;
+      background-color: white;
 
       transition: left 0.5s ease-in-out, right 0.5s ease-in-out;
       z-index: 10;
@@ -50,6 +50,11 @@ body {
     .menu {
       left: 0;
       border-right: 1px solid #000;
+      .house-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
     }
 
     .properties {
