--- a/src/App.scss
+++ b/src/App.scss
@@ -20,11 +20,13 @@ body {
       height: calc(100vh - 60px);
       #threejs-3d-container {
         position: absolute;
-        z-index: 1;
+        z-index: 2;
+        right: 0;
       }
       #threejs-2d-container {
         position: absolute;
-        z-index: 2;
+        z-index: 1;
+        right: 0;
       }
       .mode-change-btns {
         position: absolute;
@@ -39,7 +41,6 @@ body {
     .properties {
       position: absolute;
       top: 0;
-      width: 300px;
       height: 100%;
       background-color: white;
 
@@ -50,6 +51,7 @@ body {
     .menu {
       left: 0;
       border-right: 1px solid #000;
+      width: 300px;
       .house-list {
         display: flex;
         flex-direction: column;
@@ -61,7 +63,12 @@ body {
       right: 0;
       background-color: orange;
       border-left: 1px solid #000;
+      border-top: 1px solid #000;
       transition: width 0.5s ease-in-out;
+      height: calc(100vh - 60px - 201px);
+      top: auto;
+      width: 240px;
+      bottom: 0;
       .drawer-bar {
         left: -10px;
       }
