--- a/src/App.scss
+++ b/src/App.scss
@@ -57,6 +57,11 @@ body {
         flex-direction: column;
         align-items: center;
       }
+      .furniture-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
     }
 
     .properties {
