--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,23 @@ body {
     height: 60px;
     width: 100vw;
     border-bottom: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .btns {
+      margin-right: 20px;
+    }
+
+    .logo {
+      line-height: 60px;
+      font-size: 28px;
+      color: #000;
+      font-weight: normal;
+      text-shadow: 2px 2px 4px #999;
+      margin: 0;
+      margin-left: 20px;
+    }
   }
   .editor {
     flex: 1;
@@ -90,4 +107,35 @@ body {
       cursor: pointer;
     }
   }
+}
+
+#loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+#preview {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: pink;
+
+  .close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    font-size: 30px;
+    color: #fff;
+  }
+}
+
+.ant-progress-text {
+  margin-left: 10px !important;
 }
